# anomed_utils

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  README.md  anonymizer.py  art.py  challenge.py  pyproject.toml
.github/workflows/: python-app.yml
docs/: conf.py
src/anomed_utils/: __init__.py  arrays.py  web.py
tests/: test_arrays.py  test_web.py
